# claude-context-map

./: .gitignore  Cargo.toml  README.md
.claude/context-map/: project.json
.claude/context-map/sessions/: demo.jsonl
docs/ai-context/: 01-product-spec.md  README-CONTEXT.md
docs/superpowers/plans/: 2026-07-20-ccmap-graph.md  2026-07-20-digest-auto-run-default.md  2026-07-20-interactive-report.md  2026-07-20-session-digest.md
docs/superpowers/specs/: 2026-07-20-ccmap-graph-design.md  2026-07-20-digest-auto-run-default-design.md  2026-07-20-interactive-report-design.md  2026-07-20-pretty-report-design.md  2026-07-20-session-digest-injection-design.md
fixtures/: simple-session.jsonl
src/: cli.rs  main.rs  model.rs  project.rs  storage.rs
src/analyse/: classify.rs  digest.rs  estimate.rs  mcp.rs  mod.rs  normalise.rs  reader.rs  report.rs  status_line.rs  summary.rs
src/analyse/warnings/: generated.rs  helpers.rs  large.rs  lockfiles.rs  mcp.rs  mod.rs  repeated.rs  shell.rs
src/capture/: mod.rs
src/config/: defaults.rs  init.rs  mod.rs
src/render/: graph_data.rs  html.rs  mod.rs  trend_data.rs
