[package]
name = "claude-context-map"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccmap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
toml = "1.1.3"
